--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ewgewgewg.github.io/cardflip",
+  "homepage": "https://ewgewgewg.github.io/cardflip",
   "name": "cardflip",
   "version": "0.1.0",
   "private": true,
